--- a/resource/html/index.html
+++ b/resource/html/index.html
@@ -22,7 +22,8 @@
     <script src="static/js/vendors/bootstrap-reboot.min.css"></script>
     <script src="static/js/vendors/bootstrap.bundle.min.js"></script>
     <script src="static/js/vendors/bootstrap.min.js"></script>
-
+    <script src="static/js/vendors/json-viewer.js"></script>
+    <link rel="stylesheet" href="static/js/vendors/json-viewer.css" />
     <!--    <script src="static/js/angular.min.js"></script>-->
 
 
